Changed: Added max-width to style.css as a test to see if it will help with light mode input fields being too wide on narrow screen devices. Fixed: More query errors due to backtick addition.

--- a/forum/styles/Default/style.css
+++ b/forum/styles/Default/style.css
@@ -576,6 +576,11 @@ a {
     font-size: 8pt
 }
 
+.bhlightinput {
+    max-width: 90%;
+    max-height: 40%;
+}
+
 .bhinputprofileitem {
     width: 300px;
 }
